--- a/assets/css/ticket.css
+++ b/assets/css/ticket.css
@@ -173,3 +173,25 @@
         display: none !important;
     }
 }
+
+#form-loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(255, 255, 255, 0.85);
+    z-index: 9999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.25rem;
+    font-weight: 500;
+    color: #333;
+}
+
+.spinner-border {
+    width: 3rem;
+    height: 3rem;
+    margin-right: 1rem;
+}
